--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@polygon.io/client-js": "github:polygon-io/client-js",
+    "axios": "^1.5.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
